tests/agl/rejections/type/return_mismatch.agl
def f() -> int =
  return "bad"
  0
f()
